@startuml Games-eCommerce

    class Game {

        - id: Long
        - nome: String
        - descricao: String
        - preco: Double
        - diretor: String
        - anoLacamento: String
    }

    class Estoque {
        - disponivel: boolean
        - qtdDisponivel: Integer
        - qtdVendida: Integer
    }

    class Genero {
        
        - id: Long
        - nome: String
}

    class Developer {

        - id: Long
        - nome: String
        - fundacao: String
    }

    class Plataforma {

        - id: Long
        - nome: String
        - descricao: String
        - anoLancamento: String
    }

    class Fabricante {

        - id: Long
        - nome: String
    }

    abstract class Pessoa {

        - id: Long
        - nomeCompleto: String
        - cpf: String
        - dataNascimento: Date
    }

    enum Sexo {

        + MASCULINO: int
        + FEMININO: int
    }

    enum Perfil {

        + ADMIN: int
        + USER: int
    }

    class Usuario {

        - id: Long
        - apelido: String
        - email: String
        - senha: String
    }

    class Telefone {

        - id: Long
        - principal: booolean
        - codigoArea: String
        - numero: String
    }

    class Compra {

        - id: Long
        - dataCompra: LocalDate
        - totalCompra: Double
        - ifConcluida: Boolean
    }

    class ItemCompra {

        - id: Long
        - quantidade: Integer
        - precoUnitario: Double
    }

    class Endereco {

        - id: Long
        - principal: boolean
        - logradouro: String
        - bairro: String
        - numero: String
        - complemento: String
        - cep: String
    }

    class EnderecoEntrega {

        - id: Long
        - logradouro: String
        - bairro: String
        - numero: String
        - complemento: String
        - cep: String
    }

    class Avaliacao {

        - id: Long
        - comentario: String
        - data: Date
    }

    enum Estrela {

        + ESTRELA1: int
        + ESTRELA2: int
        + ESTRELA3: int
        + ESTRELA4: int
        + ESTRELA5: int
    }

    abstract class Pagamento {

        - id: Long
        - confirmacaoPagamento: Boolean
        - dataConfirmacaoPagamento: Date
        - valor: Double
    }

    class BoletoBancario {

        - nome: String
        - cpf: String
        - dataGeracaoBoleto: Date
        - dataVencimento: Date
    }

    class Pix {

        - chave: String
        - cpf: String
        - dataExpiracaoTokenPix: LocalDate
    }

    class CartaoCredito {

        - numeroCartao: String
        - nomeImpressoCartao: String
        - cpfTitular: String
    }

    enum BandeiraCartao {

        + VISA: int
        + AMERICAN_EXPRESS: int
        + HIPERCARD: int
        + DINERS: int
        + MASTERCARD: int
        + ELO: int
    }

    class Estado {

        - id: Long
        - nome: String
        - sigla: String
    }

    class Municipio {

        - id: Long
        - nome: String
    }

    Game "*" o--> "*" Genero
    Game "*" o--> "1" Developer
    Game "*" o--> "*" Plataforma
    Game "1" *--> "1" Estoque

    Plataforma "*" o--> "1" Fabricante

    Municipio "*" *--> "1" Estado

    Endereco "*" --> "1" Municipio

    Pessoa "*" --> "1" Sexo

    Usuario "1" --> "1" Pessoa
    Usuario "*" --> "*" Perfil
    Usuario "*" --> "*" Game: listaDesejo
    Pessoa "1" *--> "*" Telefone: telefone
    Pessoa "1" *--> "*" Endereco: endereço

    ItemCompra "*" --> "1" Game

    BoletoBancario -up-|> Pagamento

    Pix -up-|> Pagamento

    CartaoCredito -up-|> Pagamento
    CartaoCredito "*" --> "1" BandeiraCartao

    Compra "*" --> "1" Usuario
    Compra "1" *--> "*" ItemCompra
    Compra "*" *--> "1" EnderecoEntrega
    Compra "1" *--> "1" Pagamento

    Avaliacao "*" --> "1" Estrela
    Avaliacao "*" o--> "1" Usuario
    Avaliacao "*" --> "1" Game
@enduml
